nodejitsu-related changes.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "syncpoint",
   "description": "Sync multi-user applications with Apache CouchDB and TouchDB on mobile devices.",
-  "version": "0.3.0",
+  "version": "0.3.0-13",
   "homepage": "https://github.com/couchbaselabs/Syncpoint-API",
   "author": {
     "name": "Chris Anderson",
@@ -30,16 +30,20 @@
     "start": "bin/run"
   },
   "dependencies": {
-    "couchapp" : "0.9.x",
-    "colors" : "0.6.x",
-    "coux" : "0.1.x",
-    "prompt" : "*",
-    "docstate" : "0.0.x",
-    "errlog" : "0.1.x" 
+    "couchapp": "0.9.x",
+    "colors": "0.6.x",
+    "coux": "0.1.x",
+    "prompt": "*",
+    "docstate": "0.0.x",
+    "errlog": "0.1.x"
   },
   "devDependencies": {
     "grunt": "~0.3.6",
-    "tap" : "0.2.x"
+    "tap": "0.2.x"
   },
-  "keywords": []
+  "keywords": [],
+  "readme": "# Syncpoint API\n\nSync realtime multi-user applications with Apache CouchDB in the cloud and TouchDB on mobile devices.\n\nMobile Syncpoint is an API suite for synchronizing multi-user interactive applications using Apache CouchDB in the cloud and TouchDB on mobile devices.\n\n## Why Sync?\n\nRealtime is the future of the web. Users have multiple devices, and they want to share on their own terms.Syncpoint gives you the flexibility to build your application on top of CouchDB's trusted multi-user replication model.\n\nSyncpoint can be used for things like these: point-of-sale, retail, medical records (doctor with an iPad and limited wifi), military (need that data no matter what), social games. [See this archtiecture introduction for inspiration of how you might structure an Syncpoint app.](http://dl.dropbox.com/u/14074521/syncpoint-dev.pdf)\n\n## Millions of users, simplified.\n\nSyncpoint manages Apache CouchDB databases for multi-device installations. It provides a distributed API so that clients can ask the server to provision channels, and have a database created in the cloud. It also handles new user signup and mobile device pairing, and even works with CouchDB web user signup, if you want to provision databases for your web users.\n\nSyncpoint API drivers work by listening for document updates in CouchDB. Developers can register listeners for document types, so any additional functionality is just a JavaScript module that binds to the control channel. All of Syncpoint API is implemented in that way, so code examples are easy to find. (Look in the `lib` and `plugins` directories).\n\nIf you're building an app that's mostly a JSON API for phones or webpages, you're in the right place. [What do you want to see?](https://groups.google.com/forum/#!forum/mobile-couchbase)\n\nWe need your feedback and contributions, they will play a huge role in the direction of the project, so please let us know if you are experimenting with Syncpoint.\n\n## Get Started\n\nYou need to have three prerequisites. iOS dev chops, Node.js (>=0.6.0) and Apache CouchDB (>=1.2.0). You can get hosted CouchDB free at [IrisCouch](http://www.iriscouch.com) or [Cloudant](http://www.cloudant.com). Once you have your cloud CouchDB url, and you have installed node.js, you can use the Node Package Manager to install Syncpoint:\n\n    mkdir syncpoint && cd syncpoint\n    npm install syncpoint\n    npm start syncpoint\n\nSyncpoint will be installed in your current working directory, under `node_modules`. Alternatively if you want to contribute, you can install via git:\n\n    git clone git://github.com/couchbaselabs/Syncpoint-API.git\n    cd Syncpoint-API\n    npm install\n    npm start\n\nIt will prompt you for your cloud URL, and help you set up an admin password.  Continue this adventure by opening the Admin console (your terminal should have printed out the link to the admin console when you ran `npm start syncpoint`);\n\nIt may look like this only without any users yet:\n\n![admin console](/couchbaselabs/Syncpoint-API/raw/master/docs/admin-console.png)\n\nOnce you have <a href=\"https://github.com/couchbaselabs/Syncpoint-iOS\">compiled the iOS app</a>, pointed at your new Syncpoint node, you see the \"Sessions Awaiting Admin Approval\" list on your phone or simulator, and you can active it via the admin console.\n\nYou don't have to go learn iOS right now. Syncpoint also works with HTML5 CouchApps, so if you want to do multi-user CouchApps, Syncpoint is the right place. There is a queue of all the users in your `_users` database, any you approve will be added to the app of your choice.\n\n## Building Apps on Syncpoint\n\nYou can [read about the architecture of a Syncpoint App here.](https://github.com/couchbaselabs/Syncpoint-API/blob/master/docs/architecture.md) Also you will want to see [the Syncpoint API documentation.](https://github.com/couchbaselabs/Syncpoint-API/blob/master/docs/api.md)\n\n\n## Contribute\n\nYou can get[deeper into the code here](https://github.com/couchbaselabs/Syncpoint-API/blob/master/docs/hacking.md). We welcome contribution.\n\nSome rough todos: \n  \nLast big one as far as working out the API, is one user creates a private channel, and then invites other users to it. Also, how to best advertise public channels?\n\nAlso lots of clean up in the iOS Syncpoint framework.\n\nAnd in this code base, I think things could be modulized better, move to using follow instead of coux for changes. \n\nMaybe the subcomponents (Facebook pairing, etc) can be made independent NPM modules. Then there would need to be some config step or module install step on the part of the user to activate those but we want that anyway I think.\n\n### License\n\nThis is under the [Apache 2.0 license](LICENSE)\n",
+  "_id": "syncpoint@0.3.0",
+  "_from": "syncpoint",
+  "subdomain": "kinotel.syncpoint"
 }
